--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="br.com.alura.agenda">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="br.com.alura.agenda"
+    tools:ignore="GoogleAppIndexingWarning">
 
     <application
         android:allowBackup="true"
@@ -9,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:name=".AgendaApplication">
+        android:name=".AgendaApplication"
+        tools:ignore="AllowBackup">
         <activity android:name=".ui.activity.ListaAlunosActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
